<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="daffaveroes_gmail_com">daffaveroes@gmail.com</string>
    <string name="averoes">Averoes</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="foto_kamera">Foto Kamera</string>
    <string name="camera">Camera</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="maps">Maps</string>
    <string name="map">Map</string>
    <string name="hotel">Hotel</string>
    <string name="subway">Subway</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
